tests/paczka1/small_fuzzy/18949328.err
Error in line 9: nUB323x A532 -1,0
Error in line 8: 4K8SgA S294 98,0
Error in line 12: 4K8SgA A532 65,4
Error in line 4: Ow3Lmd S294 31,9
